# aether-terminal

./: PROTOCOL.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ollama-integration-plan.md
examples/: claude_code_hook.py  demo.mjs  langgraph_callback.py  openai_agents_adapter.py
sdk/python/: README.md  aether.py
sdk/typescript/: README.md  aether.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  ingest.rs  lib.rs  ollama.rs  pty.rs
src/components/: AiPanel.tsx  AiPromptModal.tsx  CommandPalette.tsx  ConnectionBanner.tsx  GroupGrid.tsx  Icon.tsx  LauncherMenu.tsx  PaneTree.tsx  ProjectsSection.tsx  PromptModal.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  Terminal.tsx
src/components/agents/: AgentCard.tsx  DetailDrawer.tsx  EmptyState.tsx  MissionControl.tsx  Roster.tsx  RunTabs.tsx  StatBar.tsx  Ticker.tsx  agents.css  format.ts  hooks.ts  status.ts
src/lib/: accents.ts  agentMock.ts  agentProtocol.ts  agentStore.ts  claude.ts  ingestHealth.ts  launchers.ts  ollama.ts  ollamaPrompts.ts  paletteGroups.ts  panes.ts  prefs.ts  projects.ts  pty.ts  tabGroups.ts  termRegistry.ts  theme.ts  typography.ts  useAiTask.ts
